<resources>
    <string name="app_name">Smart Mirror</string>
    <string name="action_settings">Settings</string>
    <string name="poster_details">Poster Details:</string>
    <string name="title">Title</string>
    <string name="upload_poster">Select Poster</string>
    <string name="category">Category:</string>
    <string name="name">Name:</string>
    <string name="number">Number:</string>
    <string name="email">Email:</string>
    <string name="contact_details">Contact Details: </string>
    <string name="confirm">Confirm</string>
    <string name="locations">Locations: </string>
    <string name="upload_date_start">Start Date: </string>
    <string name="upload_date_stop">Stop Date: </string>
    <string name="building_1">Building 1</string>
    <string name="building_2">Building 2</string>
    <string name="building_3">Building 3</string>
    <string name="building_4">Building 4</string>
    <string name="building_5">Building 5</string>
    <string name="building_6">Block 55</string>
    <string name="building_7">Block 57</string>
    <string name="building_8">Block 59</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="remove">Remove</string>
    <string name="logout">Logout</string>
    <string name="request">Requests</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
    <string name="search_title">All posters</string>
    <string name="search_content">Number of posters:</string>
    <string name="title_activity_admin">Welcome back Admin</string>
    <string name="title_activity_guest">Welcome back Guest</string>
    <string name="request_content">Your requests:</string>
    <string name="display_title">On Display</string>
    <string name="display_content">Your posters on display:</string>
    <string name="archive_title">Archive</string>
    <string name="archive_content">Your previous posters:</string>
    <string name="number_holder">100</string>
    <string name="status">Status:</string>
    <string name="password">Password:</string>
    <string name="sign_in_to_smart_mirror">Sign in to Smart Mirror</string>
    <string name="username">Username:</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="by">By:</string>
    <string name="icon_calender">icon_calender</string>

</resources>
