<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".UploadActivity"
        >

        <TextView
            android:id="@+id/judge_poster_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text= "@string/poster_details"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/judge_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_below="@id/judge_poster_details" />

        <FrameLayout
            android:id="@+id/judge_poster_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/judge_title">

            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/judge_pdfView"
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:background="@android:color/transparent" />

            <Button
                android:id="@+id/judge_poster_preview_button"
                android:layout_width="200dp"
                android:layout_height="250dp"
                android:alpha="0" />
        </FrameLayout>

        <TextView
            android:id="@+id/judge_categories_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/judge_poster_layout"/>


        <TextView
            android:id="@+id/judge_date_start"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/judge_categories_title"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:paddingTop="8dp"
            android:text="@string/upload_date_start"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/judge_date_stop"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/judge_date_start"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:paddingTop="8dp"
            android:text="@string/upload_date_stop"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/judge_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/contact_details"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_below="@+id/judge_date_stop"/>

        <TextView
            android:id="@+id/judge_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/name"
            android:layout_below="@id/judge_contact"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/judge_contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/number"
            android:linksClickable="true"
            android:autoLink="phone"
            android:layout_below="@id/judge_contact_name"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/judge_contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/email"
            android:autoLink="email"
            android:linksClickable="true"
            android:layout_below="@id/judge_contact_number"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/upload_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/locations"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_below="@+id/judge_contact_email" />


        <GridLayout
            android:id="@+id/judge_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/upload_locations"
            android:layout_centerHorizontal="true"
            android:paddingTop="8dp"
            android:columnCount="3"
            android:rowCount="3">

            <CheckBox
                android:id="@+id/judge_building_1"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/building_1" />

            <CheckBox
                android:id="@+id/judge_building_2"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/building_2" />

            <CheckBox
                android:id="@+id/judge_building_3"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:text="@string/building_3"/>

            <CheckBox
                android:id="@+id/judge_building_4"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/building_4" />

            <CheckBox
                android:id="@+id/judge_building_5"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/building_5"/>

            <CheckBox
                android:id="@+id/judge_building_6"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="1"
                android:text="@string/building_6" />

            <CheckBox
                android:id="@+id/judge_building_7"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/building_7" />

            <CheckBox
                android:id="@+id/judge_building_8"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:text="@string/building_8"/>
        </GridLayout>

        <LinearLayout
            android:id="@+id/judge_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/judge_grid"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:weightSum="1">

            <Button
                android:id="@+id/judge_reject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/rounded_rectangle_pink_border"
                android:onClick="reject"
                android:text="@string/reject"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/judge_approve"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/rounded_rectangle_green_border"
                android:onClick="approve"
                android:text="@string/approve"
                android:textColor="@color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/judge_remove_search"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/judge_grid"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_rectangle_pink_border"
            android:onClick="remove"
            android:text="@string/remove"
            android:visibility="invisible" />

    </RelativeLayout>
</ScrollView>

