<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:layout_marginTop="1dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="8dp">

    <RelativeLayout
        android:id="@+id/recycler_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:padding="8dp">

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/recyler_item_pdf"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="14dp"
            android:background="@android:color/transparent">

        </com.github.barteksc.pdfviewer.PDFView>

        <TextView
            android:id="@+id/recyler_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/recyler_item_pdf"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/recyler_item_pdf"
            android:layout_toRightOf="@+id/recyler_item_pdf"
            android:text="@string/title"
            android:textAppearance="@style/Base.ThemeOverlay.AppCompat.Light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/abel" />

        <TextView
            android:id="@+id/recyler_item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyler_item_title"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/recyler_item_pdf"
            android:layout_toRightOf="@+id/recyler_item_pdf"
            android:text="@string/category"
            android:textAppearance="@style/Base.ThemeOverlay.AppCompat.Light"
            android:textSize="14sp"
            app:fontFamily="@font/assistant" />

        <TextView
            android:id="@+id/recycler_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyler_item_category"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/recyler_item_pdf"
            android:layout_toRightOf="@+id/recyler_item_pdf"
            android:text="@string/by"
            android:textAppearance="@style/Base.ThemeOverlay.AppCompat.Light"
            android:textSize="14sp"
            app:fontFamily="@font/assistant" />

        <TextView
            android:id="@+id/recycler_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycler_item_name"
            android:layout_alignBottom="@+id/recyler_item_pdf"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@+id/recyler_item_pdf"
            android:layout_toRightOf="@+id/recyler_item_pdf"
            android:text="@string/status"
            android:textAppearance="@style/Base.ThemeOverlay.AppCompat.Light"
            android:textSize="14sp"
            app:fontFamily="@font/assistant" />

        <TextView
            android:id="@+id/recycler_status_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycler_item_name"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_alignBottom="@+id/recycler_status"
            android:layout_toEndOf="@+id/recycler_status"
            android:layout_toRightOf="@+id/recycler_status"
            tools:text="fknkasdgnkangd"
            android:textAppearance="@style/Base.ThemeOverlay.AppCompat.Light"
            android:textSize="14sp"
            app:fontFamily="@font/assistant" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>
</android.support.v7.widget.CardView>