<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/admin_refreshlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:paddingBottom="0dp">

            <FrameLayout
                android:id="@+id/Request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_rectangle"
                app:layout_constraintBottom_toTopOf="@+id/Displaying"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/RequestButton"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:alpha="0"
                    android:requiresFadingEdge="horizontal" />

                <android.support.constraint.ConstraintLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/RequestTextView"
                        android:text="@string/request"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:paddingTop="5dp"
                        android:paddingRight="16dp"
                        android:textColor="@color/white"
                        android:textSize="26sp"
                        app:fontFamily="@font/athiti_semibold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/RequestContentView"
                        android:text="@string/request_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="22dp"
                        android:paddingBottom="12dp"
                        android:singleLine="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:fontFamily="@font/assistant"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/RequestTextView" />

                    <TextView
                        android:id="@+id/RequestNumberView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:paddingBottom="12dp"
                        android:text="@string/number_holder"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:fontFamily="@font/assistant"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/RequestContentView"
                        app:layout_constraintTop_toBottomOf="@+id/RequestTextView"/>

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="18dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/arrow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </android.support.constraint.ConstraintLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/Displaying"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Request"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_rectangle"
                app:layout_constraintBottom_toTopOf="@+id/Search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Request">

                <Button
                    android:id="@+id/DisplayingButton"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:alpha="0"
                    android:requiresFadingEdge="horizontal" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/DisplayingTextView"
                        android:text="@string/display_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:paddingTop="5dp"
                        android:paddingRight="16dp"
                        android:textColor="@color/white"
                        android:textSize="26sp"
                        app:fontFamily="@font/athiti_semibold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/DisplayingContentView"
                        android:text="@string/display_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="22dp"
                        android:paddingBottom="12dp"
                        android:singleLine="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:fontFamily="@font/assistant"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/DisplayingTextView" />

                    <TextView
                        android:id="@+id/DisplayingNumberView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:paddingBottom="12dp"
                        android:text="@string/number_holder"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:fontFamily="@font/assistant"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/DisplayingContentView"
                        app:layout_constraintTop_toBottomOf="@+id/DisplayingTextView" />

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="18dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/arrow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </android.support.constraint.ConstraintLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/Search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Displaying"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/rounded_rectangle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Displaying">

                <Button
                    android:id="@+id/SearchButton"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:alpha="0"
                    android:requiresFadingEdge="horizontal" />

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/SearchTextView"
                        android:text="@string/search_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:paddingTop="5dp"
                        android:paddingRight="16dp"
                        android:textColor="@color/white"
                        android:textSize="26sp"
                        app:fontFamily="@font/athiti_semibold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/SearchContentView"
                        android:text="@string/search_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="22dp"
                        android:paddingBottom="12dp"
                        android:singleLine="false"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:fontFamily="@font/assistant"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/SearchTextView" />

                    <TextView
                        android:id="@+id/SearchNumberView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:paddingBottom="12dp"
                        android:text="@string/number_holder"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:fontFamily="@font/assistant"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/SearchContentView"
                        app:layout_constraintTop_toBottomOf="@+id/SearchTextView" />

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:scaleType="fitXY"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginRight="18dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/arrow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </android.support.constraint.ConstraintLayout>

            </FrameLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/AdminUploadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Search"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:backgroundTint="@color/white"
                app:elevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Search"
                app:layout_constraintVertical_bias="0.8"
                app:srcCompat="@drawable/add_icon"
                app:useCompatPadding="false" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>